--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
-  <title>Text Converter</title>
-  <link rel="stylesheet" href="style.css">
-
+    <title>Text Converter</title>
+    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <a href="/"><img id="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a>
-  <div id="convertapp">
-    <h1 id="header">Μετατροπή Κειμένου!!</h1>
-    <p id="details">Εισαγάγετε κάποιο κείμενο στο πεδίο εισαγωγής και επιλέξτε τη λειτουργία μετατροπής από το
-      αναπτυσσόμενο μενού:</p>
-    <input type="textarea" placeholder="Εισάγετε το κείμενο σας" id="inputText" rows="4" cols="50">
-    <select id="conversionMode">
+    <a href="/"><img id="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a>
+    <div id="convertapp">
+        <h1 id="header">Μετατροπή Κειμένου</h1>
+        <p id="details">Εισαγάγετε κάποιο κείμενο στο πεδίο εισαγωγής και επιλέξτε τη λειτουργία μετατροπής από το αναπτυσσόμενο μενού:</p>
+        <input type="textarea" placeholder="Εισάγετε το κείμενο σας" id="inputText" rows="4" cols="50">
+        <select id="conversionMode" onchange="if (!window.__cfRLUnblockHandlers) return false; convertText()" data-cf-modified-9d2a77760784d703155f03e9-="">
       <option value="lowercase">ΚΕΦΑΛΑΙΑ σε Πεζά</option>
       <option value="capitalized">Πεζά σε ΚΕΦΑΛΑΙΑ</option>
-      <option value="toSentenceCase">ΚΕΦΑΛΑΙΑ μετά την τελία</option>
+      <option value="toSentenceCase">Κεφαλαίο μετά την τελεία</option>
       <option value="titled">ΠεζοΚεφαλαία</option>
     </select>
-    <div class="labelFirstLetterdiv">
-      <label id="labelFirstLetter"><input type="checkbox" id="keepFirstLetterCapitalized"> Κρατήστε το πρώτο γράμμα
-        κεφαλαίο</label>
+
+        <button id="btn-copy" onclick="if (!window.__cfRLUnblockHandlers) return false; copyText()" data-cf-modified-9d2a77760784d703155f03e9-="">Αντιγραφή</button>
+        <p id="output"></p>
     </div>
-    <button id="btn-submit" onclick="convertText()">Μετατροπή</button>
-    <p id="output"></p>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <script src="index.js" type="9d2a77760784d703155f03e9-text/javascript"></script>
+<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="9d2a77760784d703155f03e9-|49" defer></script></body>
 
 </html>
