--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="/"><img id="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a>
+    <a href="/"><img alt="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a>
     <div id="convertapp">
         <h1 id="header">Μετατροπή Κειμένου</h1>
         <p id="details">Εισαγάγετε κάποιο κείμενο στο πεδίο εισαγωγής και επιλέξτε τη λειτουργία μετατροπής από το αναπτυσσόμενο μενού:</p>
@@ -28,6 +28,5 @@
         <p id="output"></p>
     </div>
     <script src="index.js" type="9d2a77760784d703155f03e9-text/javascript"></script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="9d2a77760784d703155f03e9-|49" defer></script></body>
 
 </html>
