Fixed the type at js src

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="btn-copy" onclick="if (!window.__cfRLUnblockHandlers) return false; copyText()" data-cf-modified-9d2a77760784d703155f03e9-="">Αντιγραφή</button>
         <p id="output"></p>
     </div>
-    <script src="index.js" type="9d2a77760784d703155f03e9-text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
 
 </html>
+
