Added on change event listener

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <h1 id="header">Μετατροπή Κειμένου</h1>
         <p id="details">Εισαγάγετε κάποιο κείμενο στο πεδίο εισαγωγής και επιλέξτε τη λειτουργία μετατροπής από το αναπτυσσόμενο μενού:</p>
         <input type="textarea" placeholder="Εισάγετε το κείμενο σας" id="inputText" rows="4" cols="50">
-        <select id="conversionMode" onchange="if (!window.__cfRLUnblockHandlers) return false; convertText()" data-cf-modified-9d2a77760784d703155f03e9-="">
-      <option value="lowercase">ΚΕΦΑΛΑΙΑ σε Πεζά</option>
+        <select id="conversionMode" onchange="if (false) return false; convertText()">                <option value="lowercase">ΚΕΦΑΛΑΙΑ σε Πεζά</option>
       <option value="capitalized">Πεζά σε ΚΕΦΑΛΑΙΑ</option>
       <option value="toSentenceCase">Κεφαλαίο μετά την τελεία</option>
       <option value="titled">ΠεζοΚεφαλαία</option>
