--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="/"><img alt="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a>
+   <!-- <a href="/"><img alt="logo" src="https://terms.darc.ai/images/darc_logo.png" /></a> --!>
     <div id="convertapp">
         <h1 id="header">Μετατροπή Κειμένου</h1>
         <p id="details">Εισαγάγετε κάποιο κείμενο στο πεδίο εισαγωγής και επιλέξτε τη λειτουργία μετατροπής από το αναπτυσσόμενο μενού:</p>
